--- a/api2md-core/pom.xml
+++ b/api2md-core/pom.xml
@@ -35,6 +35,11 @@
       <groupId>com.thoughtworks.qdox</groupId>
       <artifactId>qdox</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
