--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,13 @@
       <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
-        <version>3.2</version>
+        <version>3.5</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>5.1.8.RELEASE</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -46,12 +52,9 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.yahacode</groupId>
-        <artifactId>api2md-core</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <configuration>
-          <host>www.yahacode.com</host>
-        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>3.5</version>
       </plugin>
     </plugins>
   </build>
