--- a/api2md-core/pom.xml
+++ b/api2md-core/pom.xml
@@ -40,6 +40,12 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.54</version>
+    </dependency>
   </dependencies>
 
 </project>
